--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,3 +1,7 @@
+.card-scale:hover {
+  transform: scale(1.1);
+  transition: all 0.8s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
+}
 .white {
   color: white !important;
 }
